--- a/.project
+++ b/.project
@@ -15,9 +15,15 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>io.ebean.eclipse.enhancer.builder.ebeanBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
+		<nature>io.ebean.eclipse.enhancer.ebeanNature</nature>
 	</natures>
 </projectDescription>
