--- a/pom.xml
+++ b/pom.xml
@@ -24,14 +24,15 @@
 
 		</dependency>
 		<dependency>
-			<groupId>io.ebean</groupId>
-			<artifactId>ebean-agent</artifactId>
-			<version>12.1.1</version>
-		</dependency>
-		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.42</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.22</version>
 		</dependency>
 	</dependencies>
 	<repositories>
